# Chega-eu-n-o-aguento-mais

./: Dockerfile  README.md  app.py  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  seed.py  seeds.py
SQLAlchemy/: __init__.py  base.py  seeds.py  utils.py
api_achados_perdidos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: index.md
