[tool.poetry]
name = "my-fastapi-app"
version = "0.1.0"
description = "A FastAPI application with JWT authentication and SQLAlchemy for database management."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
pydantic = "^1.8.2"
python-jose = "^3.3.0"
faker = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"